Add player-facing hunting locations
